--- a/endnote.bib
+++ b/endnote.bib
@@ -255,8 +255,8 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 }
 
 ﻿@misc{Rousselet_2019,
-   author = {Rousselet, Guillaume A and Wilcox, Rand R}
-   title = {Reaction times and other skewed distributions: problems with the mean and the median}
+   author = {Rousselet, Guillaume A and Wilcox, Rand R},
+   title = {Reaction times and other skewed distributions: problems with the mean and the median},
    DOI= {10.1101/383935},
    url = {https://www.biorxiv.org/content/10.1101/383935v3},
    year = {2019},
